--- a/retrieval/settings/pretrain_all.yaml
+++ b/retrieval/settings/pretrain_all.yaml
@@ -2,9 +2,9 @@ device: "cuda"
 seed: 20
 embed_size: 1024
 temp: 0.07
-json_files: ['/mnt/fast/nobackup/scratch4weeks/xm00178/WavCaps/data/json_files/BBC_Sound_Effects/bbc_pretrain.json', '/mnt/fast/nobackup/scratch4weeks/xm00178/WavCaps/data/json_files/FreeSound/fsd_pretrain.json', '/mnt/fast/nobackup/scratch4weeks/xm00178/WavCaps/data/json_files/SoundBible/sb_pretrain.json', "/mnt/fast/nobackup/scratch4weeks/xm00178/WavCaps/data/json_files/AudioSet_SL/as_pretrain.json", "data/AudioCaps/json_files/train.json", "data/Clotho/json_files/train.json"]
+json_files: ['data/json_files/BBC_Sound_Effects/bbc_pretrain.json', 'data/json_files/FreeSound/fsd_pretrain.json', 'data/json_files/SoundBible/sb_pretrain.json', "data/json_files/AudioSet_SL/as_pretrain.json", "data/AudioCaps/json_files/train.json", "data/Clotho/json_files/train.json"]
 resume: false
-blacklist: "/mnt/fast/nobackup/scratch4weeks/xm00178/WavCaps/data/json_files/blacklist/"
+blacklist: "data/json_files/blacklist/" # path to blacklist file
 embed_regularization: true
 
 dist_args:
